[package]
name = "fixture-io"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]

[dependencies]
log = "0.3"
futures = "0.1"
tokio-core = "0.1"
tokio-timer = { git = "https://github.com/tokio-rs/tokio-timer" }
bytes = { git = "https://github.com/carllerche/bytes" }
io-dump = { git = "https://github.com/carllerche/io-dump" }
